--- a/imageSlider/index.html
+++ b/imageSlider/index.html
@@ -13,6 +13,6 @@
 
         <script type="text/javascript" src="//js.jotform.com/JotFormCustomWidget.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script src="js/scripts.js"></script>
+        <script src="min/scripts.min.js"></script>
     </body>
 </html>
