--- a/daycountdown/index.html
+++ b/daycountdown/index.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8" />
 
         <!-- Our CSS stylesheet file -->
-        <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans+Condensed:300" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" />
         <link rel="stylesheet" href="assets/css/styles.css?v3" />
         <link rel="stylesheet" href="assets/countdown/jquery.countdown.css?v3" />
 
-        <script type="text/javascript" src="//js.jotform.com/JotFormCustomWidget.min.js"></script>
+        <script type="text/javascript" src="https://js.jotform.com/JotFormCustomWidget.min.js"></script>
 
         <!--[if lt IE 9]>
           <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -50,7 +50,7 @@
         <p id="note"></p>
 
         <!-- JavaScript includes -->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="min/scripts.min.js"></script>
         <!--<script src="assets/countdown/jquery.countdown.js"></script>
         <script src="assets/js/script.js"></script>-->
