--- a/daycountdown/index.html
+++ b/daycountdown/index.html
@@ -51,7 +51,7 @@
 
         <!-- JavaScript includes -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script src="assets/js/scripts.js"></script>
+        <script src="assets/js/script.js"></script>
         <!--<script src="assets/countdown/jquery.countdown.js"></script>
         <script src="assets/js/script.js"></script>-->
 
