--- a/daycountdown/index.html
+++ b/daycountdown/index.html
@@ -5,8 +5,8 @@
 
         <!-- Our CSS stylesheet file -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" />
-        <link rel="stylesheet" href="assets/css/styles.css?v3" />
-        <link rel="stylesheet" href="assets/countdown/jquery.countdown.css?v3" />
+        <link rel="stylesheet" href="css/styles.css?v3" />
+        <link rel="stylesheet" href="js/countdown/jquery.countdown.css?v3" />
 
         <script type="text/javascript" src="https://js.jotform.com/JotFormCustomWidget.min.js"></script>
 
@@ -51,9 +51,8 @@
 
         <!-- JavaScript includes -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script src="assets/js/script.js"></script>
-        <!--<script src="assets/countdown/jquery.countdown.js"></script>
-        <script src="assets/js/script.js"></script>-->
+        <script src="js/countdown/jquery.countdown.js"></script>
+        <script src="js/script.js"></script>
 
     </body>
 </html>
