--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Tonix</title>
+	<!--adsense test-->
 	<script data-ad-client="ca-pub-4015797726169924" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
