--- a/index.html
+++ b/index.html
@@ -1,13 +1,164 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Tonix</title>
-	<!--adsense test-->
-	<script data-ad-client="ca-pub-4015797726169924" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-</head>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-Tonix
-</body>
+<html lang="en">
+	<head>
+		<title>Elton Cris P. Regañon - Website Frontend Developer</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 
+		<link rel="stylesheet" type="text/css" href="style/scrollpath.css" /> 
+		<link rel="stylesheet" type="text/css" href="style/style.css" /> 
+		<link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" /> 
+		<link href='http://fonts.googleapis.com/css?family=Ubuntu|Lobster+Two' rel='stylesheet' type='text/css'>
+		<meta name="description" content="This website is owned by a young filipino website developer named Elton Cris" /> 
+		<meta name="keywords" content="elton cris, elton, elton website, elton junior web developer, elton personal website" /> 
+	</head>
+	<body>
+		<!---nav 
+				<nav>
+		<div class="draggablemenu">
+			<ul class="menu">
+				<li><a class="navactive" href="#me">Home</a></li>
+				<li><a href="#about">About</a></li>
+				<li><a href="#designed">Design</a></li>
+				<li><a href="#developed">Development</a></li>
+				<li><a href="#contact">Contact</a></li>
+			</ul>
+		</div>
+		</nav>	
+				-->
+		<div class="wrapper">
+			<header id="me">
+					<h1><span class="name">Elton Cris P. Regañon</span></h1>
+					<h2>Website Specialist</h2>
+
+			</header>
+<!-- hide pages for now
+			<section id="about">
+				<h1>About Me</h1>
+				<div id="content">
+					<div id="photo">
+						<img src="images/photo_gwapo.png" border="0" alt="Elton Cris" />
+					</div>
+
+					<p>My fields of experties are HTML, CSS, Javascript, jQuery, PHP and MySQL. Creating website is my passion, this is where I can truly unleash my creativity. I spend most of my time creating websites, resolving script conflicts, beautifying CSS, creating messy scripts and other exciting web stuff. I have high experience with the powerful web platforms like Wordpress, Joomla, Drupal and many others.
+					</p>
+				</div>
+			</section>
+			<section id="designed">
+				<h1>Things I've Designed</h1>
+				<ul class="gallery">
+					<li>
+						<div class="item">
+							<img src="images/designed/gilland_wordpress.png" alt="Gilland & Burgess Wordpress">
+							<div class="caption">
+						        <a href="">Gilland & Burgess Page</a>
+						        <p>Created with Wordpress CMS. 
+						        	<a href="http://theburgesslawfirm.com/" target="_blank">Click to View</a></p>
+						    </div>
+						</div>
+					</li>
+					<li>
+						<div class="item">
+						<img src="images/designed/contact_form.png" alt="Christmas Theme Contact Form">
+							<div class="caption">
+						        <a href="">Contact Form</a>
+						        <p>A christmas themed contact form from JotForm 
+						        	<a href="http://www.jotformpro.com/form/23489164716967" target="_blank">Click to View</a></p>
+						    </div>
+						</div>	
+					</li>	
+			<div class="clear"></div>	
+
+					<li>
+						<div class="item">
+						<img src="images/designed/main_converter.png" alt="Main Converter">
+							<div class="caption">
+						        <a href="">PHP Converstion Tool</a>
+						        <p>PHP Main Version Converter for MU Online Main.exe Client.
+						        	<a href="http://idarktech.com/main_converter.php" target="_blank">Click to View</a></p>
+						    </div>
+						</div>	
+					</li>
+					<li>
+						<div class="item">
+						<img src="images/designed/jrmsu_tambayan.png" alt="JRMSU Tambayan">
+							<div class="caption">
+						        <a href="">JRMSU Tambayan</a>
+						        <p>Custom HTML page. Demo page for JRMSU Tambayan
+						        	<a href="http://jrmsu.clanteam.com" target="_blank">Click to View</a></p>
+						    </div>
+						</div>	
+					</li>
+				</ul>
+			<div class="clear"></div>	
+			</section>
+			<section id="developed">
+				<h1>Things I've Developed</h1>
+				<ul class="gallery">
+					<li>
+						<div class="item">
+							<img src="images/developed/custom_loginform.png" alt="Custom Login Form">
+							<div class="caption">
+						        <a href="">Custom Login Form</a>
+						        <p>Custom PHP Login Form for website authentication. 
+						        	<a href="http://idarktech.com/login.php" target="_blank">Click to View</a></p>
+						    </div>
+						</div>
+					</li>
+					<li>
+						<div class="item">
+						<img src="images/developed/add_search_database.png" alt="Add & Search Data from Dbase">
+							<div class="caption">
+						        <a href="">Add, Search Database</a>
+						        <p>Custom PHP that add, search anything from the database. 
+						        	<a href="http://idarktech.com/scratch_php_mysql/" target="_blank">Click to View</a></p>
+						    </div>
+						</div>	
+					</li>	
+			<div class="clear"></div>	
+
+					<li>
+						<div class="item">
+						<img src="images/developed/elton_sample.png" alt="Coming soon">
+							<div class="caption">
+						        <a href="">Coming soon...</a>
+						        <p>
+						        	<a href="#">Click to View</a></p>
+						    </div>
+						</div>	
+					</li>
+					<li>
+						<div class="item">
+						<img src="images/developed/elton_sample.png" alt="Coming soon">
+							<div class="caption">
+						        <a href="">Coming soon...</a>
+						        <p>
+						        	<a href="#">Click to View</a></p>
+						    </div>
+						</div>	
+					</li>
+				</ul>
+			<div class="clear"></div>					
+			</section>
+			<section id="contact">
+				<h1>911?</h1>
+				<p>
+					If you need assistance anything about your website like fix styles, conflicts and other similar issues, feel free to contact me. You can use the follwing form.
+				<div id="contactform">
+
+				<iframe allowtransparency="true" src="http://form.jotformpro.com/form/31601296629961" frameborder="0" style="width:70%; height:527px; border:none;margin-left: 80px;" scrolling="no"></iframe>
+
+				</div>
+
+				</p>
+			</section> -->
+		</div>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+		<script src="script/min.jquery.scrollpath.js"></script>
+		<script src="script/required.js"></script>
+		<script type="text/javascript">
+		  $(function() {
+    $( "nav" ).resizable();
+  });
+  </script></script>
+	</body>
 </html>
