--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Ubuntu|Lobster+Two' rel='stylesheet' type='text/css'>
 		<meta name="description" content="This website is owned by a young filipino website developer named Elton Cris" /> 
 		<meta name="keywords" content="elton cris, elton, elton website, elton junior web developer, elton personal website" /> 
+		<script data-ad-client="ca-pub-4015797726169924" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	</head>
 	<body>
 		<!---nav 
