--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 
 		<link rel="stylesheet" type="text/css" href="style/scrollpath.css" /> 
 		<link rel="stylesheet" type="text/css" href="style/style.css" /> 
-		<link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" /> 
-		<link href='http://fonts.googleapis.com/css?family=Ubuntu|Lobster+Two' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" type="text/css" href="//code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" /> 
+		<link href='//fonts.googleapis.com/css?family=Ubuntu|Lobster+Two' rel='stylesheet' type='text/css'>
 		<meta name="description" content="This website is owned by a young filipino website developer named Elton Cris" /> 
 		<meta name="keywords" content="elton cris, elton, elton website, elton junior web developer, elton personal website" /> 
 		<script data-ad-client="ca-pub-4015797726169924" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -52,7 +52,7 @@
 							<div class="caption">
 						        <a href="">Gilland & Burgess Page</a>
 						        <p>Created with Wordpress CMS. 
-						        	<a href="http://theburgesslawfirm.com/" target="_blank">Click to View</a></p>
+						        	<a href="//theburgesslawfirm.com/" target="_blank">Click to View</a></p>
 						    </div>
 						</div>
 					</li>
@@ -62,7 +62,7 @@
 							<div class="caption">
 						        <a href="">Contact Form</a>
 						        <p>A christmas themed contact form from JotForm 
-						        	<a href="http://www.jotformpro.com/form/23489164716967" target="_blank">Click to View</a></p>
+						        	<a href="//www.jotformpro.com/form/23489164716967" target="_blank">Click to View</a></p>
 						    </div>
 						</div>	
 					</li>	
@@ -74,7 +74,7 @@
 							<div class="caption">
 						        <a href="">PHP Converstion Tool</a>
 						        <p>PHP Main Version Converter for MU Online Main.exe Client.
-						        	<a href="http://idarktech.com/main_converter.php" target="_blank">Click to View</a></p>
+						        	<a href="//idarktech.com/main_converter.php" target="_blank">Click to View</a></p>
 						    </div>
 						</div>	
 					</li>
@@ -84,7 +84,7 @@
 							<div class="caption">
 						        <a href="">JRMSU Tambayan</a>
 						        <p>Custom HTML page. Demo page for JRMSU Tambayan
-						        	<a href="http://jrmsu.clanteam.com" target="_blank">Click to View</a></p>
+						        	<a href="//jrmsu.clanteam.com" target="_blank">Click to View</a></p>
 						    </div>
 						</div>	
 					</li>
@@ -100,7 +100,7 @@
 							<div class="caption">
 						        <a href="">Custom Login Form</a>
 						        <p>Custom PHP Login Form for website authentication. 
-						        	<a href="http://idarktech.com/login.php" target="_blank">Click to View</a></p>
+						        	<a href="//idarktech.com/login.php" target="_blank">Click to View</a></p>
 						    </div>
 						</div>
 					</li>
@@ -110,7 +110,7 @@
 							<div class="caption">
 						        <a href="">Add, Search Database</a>
 						        <p>Custom PHP that add, search anything from the database. 
-						        	<a href="http://idarktech.com/scratch_php_mysql/" target="_blank">Click to View</a></p>
+						        	<a href="//idarktech.com/scratch_php_mysql/" target="_blank">Click to View</a></p>
 						    </div>
 						</div>	
 					</li>	
@@ -145,15 +145,15 @@
 					If you need assistance anything about your website like fix styles, conflicts and other similar issues, feel free to contact me. You can use the follwing form.
 				<div id="contactform">
 
-				<iframe allowtransparency="true" src="http://form.jotformpro.com/form/31601296629961" frameborder="0" style="width:70%; height:527px; border:none;margin-left: 80px;" scrolling="no"></iframe>
+				<iframe allowtransparency="true" src="//form.jotformpro.com/form/31601296629961" frameborder="0" style="width:70%; height:527px; border:none;margin-left: 80px;" scrolling="no"></iframe>
 
 				</div>
 
 				</p>
 			</section> -->
 		</div>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+		<script src="//code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 		<script src="script/min.jquery.scrollpath.js"></script>
 		<script src="script/required.js"></script>
 		<script type="text/javascript">
