--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 		<meta name="keywords" content="elton cris, elton, elton website, elton junior web developer, elton personal website" /> 
 		<script data-ad-client="ca-pub-4015797726169924" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-PQ243XEG6M"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2TEVS0456P"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-PQ243XEG6M');
+  gtag('config', 'G-2TEVS0456P');
 </script>
 	</head>
 	<body>
