--- a/ga4.html
+++ b/ga4.html
@@ -3,13 +3,13 @@
 <html>
 <head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-8D6BESXX7M"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2TEVS0456P"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-8D6BESXX7M');
+  gtag('config', 'G-2TEVS0456P');
 </script>
 
   <meta charset="utf-8">
